--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>타이틀작성</title>
+    <title>나윤 포트폴리오</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -50,8 +50,8 @@
         <div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
-          		<span class="subheading">Hey! I am</span>
-		  				<h1>Gildong Hong</h1>
+          		<span class="subheading">HI, I am</span>
+		  				<h1>NAYOON LIM</h1>
 			  				<h2>I'm a 
 								  <span
 								     class="txt-rotate"
@@ -85,14 +85,14 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+		            <p>디자인으로 여러 사람들에게 긍정적인 가치를 추구하고 에너지를 펼치고 싶다. </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Ronaldo Fredrickson</span></li>
-		            	<li class="d-flex"><span>Date of birth:</span> <span>November 28, 1989</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>San Francisco CA 97987 USA</span></li>
+		            	<li class="d-flex"><span>Name:</span> <span>임나윤</span></li>
+		            	<li class="d-flex"><span>Date of birth:</span> <span>1996/01/01</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>부산광역시 해운대구 재반로 221번길 8-86</span></li>
 		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>ronaldo@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+1-2234-5678-9-0</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>sumi4480@naver.com</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span>010-5559-6371</span></li>
 		            </ul>
 		          </div>
 		        </div>
