--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>디자인으로 여러 사람들에게 긍정적인 가치를 추구하고 에너지를 펼치고 싶다. </p>
+		            <p>변화하고 혁신하라 , 저의 신념은 변화를 이끌 줄 알고 개선하는 것 입니다. 자신의 한계를 뛰어 넘는 것에 대해 두려워하지 않고 최대한 해보는 것 입니다. 그런 신념을 통해 저는 디자인으로 목표를 향해 나아갈 것이고 회사에 최선을 다할 것 입니다. </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>임나윤</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>1996/01/01</span></li>
@@ -121,10 +121,11 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Bachelor of Science in Computer Science</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<span class="date">2020</span>
+		    					<h2>부산시 교육과정</h2>
+		    					<span class="position">Centum Vocation Training Institute <br>센텀직업전문학교</span>
+		    					<p>Word, Power Point, Adobe photoshop, Adobe Illustrator 등을 다룰 수 있는 능력을 키워 트랜디한 면목을 넓히고 제작할 수 있는 기초를 다졌다.<br>
+		    					Photoshop GTQ1급 자격증 취득</p>
 	    					</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -132,10 +133,11 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Computer Processing Systems/Computer Software</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<span class="date">2020-2021</span>
+		    					<h2>반응형 웹퍼블리싱 & 웹디자인 과정<br>
+Publishing & DesignBusan It Education Center</h2>
+		    					<span class="position">부산 it 교육센터</span>
+		    					<p>디자인씽킹을 바탕으로 한 사고를 통해 프로토 타입 제작 및 사용성 테스트, 사용자 중심의 디자인 구성요소를 다룰 수 있는 능력과, UI/UX를 설계할 수 있는 능력을 향상시켰다.<br>Craftsman Computer Graphics Operation 컴퓨터그래픽스 자격증 취득/ Web Design 웹디자인 필기 취득 </p>
 		    				</div>
 	    				</div>
 					  </div>
@@ -145,7 +147,7 @@
 					  	<div class="row progress-circle mb-5">
 					  		<div class="col-lg-4 mb-4">
 						      <div class="bg-white rounded-lg shadow p-4">
-						        <h2 class="h5 font-weight-bold text-center mb-4">CSS</h2>
+						        <h2 class="h5 font-weight-bold text-center mb-4">Illustor</h2>
 
 						        <!-- Progress bar 1 -->
 						        <div class="progress mx-auto" data-value='90'>
@@ -156,7 +158,7 @@
                                     <span class="progress-bar border-primary"></span>
 						          </span>
 						          <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-						            <div class="h2 font-weight-bold">90<sup class="small">%</sup></div>
+						            <div class="h2 font-weight-bold">95<sup class="small">%</sup></div>
 						          </div>
 						        </div>
 						        <!-- END -->
@@ -164,10 +166,10 @@
 						        <!-- Demo info -->
 						        <div class="row text-center mt-4">
 						          <div class="col-6 border-right">
-						            <div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
+						            <div class="h4 font-weight-bold mb-0">70%</div><span class="small text-gray">tool</span>
 						          </div>
 						          <div class="col-6">
-						            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
+						            <div class="h4 font-weight-bold mb-0">80%</div><span class="small text-gray">design</span>
 						          </div>
 						        </div>
 						        <!-- END -->
@@ -176,7 +178,7 @@
 
 						    <div class="col-lg-4 mb-4">
 						      <div class="bg-white rounded-lg shadow p-4">
-						        <h2 class="h5 font-weight-bold text-center mb-4">HTML</h2>
+						        <h2 class="h5 font-weight-bold text-center mb-4">photoshop</h2>
 
 						        <!-- Progress bar 1 -->
 						        <div class="progress mx-auto" data-value='80'>
@@ -187,7 +189,7 @@
                         <span class="progress-bar border-primary"></span>
 						          </span>
 						          <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-						            <div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
+						            <div class="h2 font-weight-bold">90<sup class="small">%</sup></div>
 						          </div>
 						        </div>
 						        <!-- END -->
@@ -195,10 +197,10 @@
 						        <!-- Demo info -->
 						        <div class="row text-center mt-4">
 						          <div class="col-6 border-right">
-						            <div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
+						            <div class="h4 font-weight-bold mb-0">70%</div><span class="small text-gray">tool</span>
 						          </div>
 						          <div class="col-6">
-						            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
+						            <div class="h4 font-weight-bold mb-0">80%</div><span class="small text-gray">design</span>
 						          </div>
 						        </div>
 						        <!-- END -->
@@ -207,7 +209,7 @@
 
 						    <div class="col-lg-4 mb-4">
 						      <div class="bg-white rounded-lg shadow p-4">
-						        <h2 class="h5 font-weight-bold text-center mb-4">jQuery</h2>
+						        <h2 class="h5 font-weight-bold text-center mb-4">Web design</h2>
 
 						        <!-- Progress bar 1 -->
 						        <div class="progress mx-auto" data-value='75'>
@@ -226,13 +228,14 @@
 						        <!-- Demo info -->
 						        <div class="row text-center mt-4">
 						          <div class="col-6 border-right">
-						            <div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
+						            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">html</span>
 						          </div>
 						          <div class="col-6">
-						            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
+						            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">css</span>
 						          </div>
 						        </div>
 						        <!-- END -->
+						        
 						      </div>
 						    </div>
 					  	</div>
@@ -250,7 +253,7 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>jQuery</h3>
+										<h3>HTML5</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -261,7 +264,7 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>HTML5</h3>
+										<h3>Illustor</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
@@ -272,7 +275,7 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>CSS3</h3>
+										<h3>UI</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -283,7 +286,7 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>WordPress</h3>
+										<h3>JQuery</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -294,7 +297,7 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>SEO</h3>
+										<h3>UX</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
