--- a/index.html
+++ b/index.html
@@ -328,29 +328,29 @@ Publishing & DesignBusan It Education Center</h2>
         </div>
     		<div class="row no-gutters">
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-1.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/%EC%B9%B4%ED%8E%9824banner.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="cafe24.html">Cafe24/ shopping mall Design</a></h3>
+	    					<span>Web /mobile Design</span>
 	    				</div>
     				</div>
   				</div>
   				<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-2.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/%EC%B2%AD%EA%B5%AC%EC%88%98%EC%82%B0banner.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+	    					<h3><a href="susan.html">Branding &amp; Illustration Design</a></h3>
 	    					<span>Web Design</span>
 	    				</div>
     				</div>
   				</div>
 
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-3.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/ediya-%EB%B0%B0%EB%84%88.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+	    					<h3><a href="ediya.html">Web &amp; Illustration Design</a></h3>
 	    					<span>Web Design</span>
 	    				</div>
     				</div>
