--- a/index.html
+++ b/index.html
@@ -350,17 +350,17 @@ Publishing & DesignBusan It Education Center</h2>
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/ediya-%EB%B0%B0%EB%84%88.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="ediya.html">Web &amp; Illustration Design</a></h3>
+	    					<h3><a href="ediya.html">Web &amp; Publishing Design</a></h3>
 	    					<span>Web Design</span>
 	    				</div>
     				</div>
     			</div>
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-4.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/goldhospital.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="goldhospital.html">Logo &amp; branding Design</a></h3>
+	    					<span>logo Design</span>
 	    				</div>
     				</div>
     			</div>
