--- a/cafe24.html
+++ b/cafe24.html
@@ -31,7 +31,7 @@
 		
 		    
 			<div class="project_img">
-				<img src="images/%EC%B9%B4%ED%8E%9824-%EA%B8%B0%ED%9A%8D%EC%84%9C.gif" class="re_img" alt="카페24">
+				<img src="%EC%B9%B4%ED%8E%9824-%EA%B8%B0%ED%9A%8D%EC%84%9C.gif" class="re_img" alt="카페24">
 			
 			<div class="starmi_link_btn">
 				<a href="http://sumi4480.cafe24.com" target = "_blank">view</a></div>
