--- a/index.html
+++ b/index.html
@@ -404,20 +404,20 @@ Publishing & DesignBusan It Education Center</h2>
 			</div>
 			<div class="row row-bottom-padded-sm">
 				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/style1.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/black.jpg" alt="Image" class="img-responsive">
+					<a href="images/3reflate.gif" class="fh5co-project-item image-popup to-animate">
+						<img src="images/goldhospital_fla.png" alt="Image" class="img-responsive">
 						<div class="fh5co-text">
-						<h2>카드뉴스</h2>
-						<span>potoshop &amp; illustrater / CARDNEWS</span>
+						<h2>리플렛</h2>
+						<span>potoshop &amp; illustrater / leaflet</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/style2.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/black.jpg" alt="Image" class="img-responsive">
+					<a href="images/banner-design.gif" class="fh5co-project-item image-popup to-animate">
+						<img src="images/banner.png" alt="Image" class="img-responsive">
 						<div class="fh5co-text">
-						<h2>대한항공</h2>
-						<span>potoshop &amp; illustrater / POP-UP</span>
+						<h2>배너디자인</h2>
+						<span>photoshop &amp; illustrater / banner</span>
 						</div>
 					</a>
 				</div>
@@ -425,19 +425,19 @@ Publishing & DesignBusan It Education Center</h2>
 				<div class="clearfix visible-sm-block"></div>
 
 				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/thumb2.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/black.jpg" alt="Image" class="img-responsive">
+					<a href="images/brusher_in.gif" class="fh5co-project-item image-popup to-animate">
+						<img src="images/brusher.png" alt="Image" class="img-responsive">
 						<div class="fh5co-text">
-						<h2>게스</h2>
+						<h2>브로셔</h2>
 						<span>potoshop &amp; illustrater / EVENT BANNER</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/style4.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/black.jpg" alt="Image" class="img-responsive">
+					<a href="images/cardnews_inb.gif" class="fh5co-project-item image-popup to-animate">
+						<img src="images/cardnews.png" alt="Image" class="img-responsive">
 						<div class="fh5co-text">
-						<h2>립톤</h2>
+						<h2>카드뉴스</h2>
 						<span>potoshop &amp; illustrater / BANNER</span>
 						</div>
 					</a>
@@ -446,10 +446,10 @@ Publishing & DesignBusan It Education Center</h2>
 				<div class="clearfix visible-sm-block"></div>
 
 				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/style5.jpg" class="fh5co-project-item image-popup to-animate">
-						<img src="images/black.jpg" alt="Image" class="img-responsive">
+					<a href="images/cootake_in.jpg" class="fh5co-project-item image-popup to-animate">
+						<img src="images/cootake.png" alt="Image" class="img-responsive">
 						<div class="fh5co-text">
-						<h2>썸네일</h2>
+						<h2>로고작업</h2>
 						<span>illustrater / EVENT BANNER</span>
 						</div>
 					</a>
