--- a/ediya.html
+++ b/ediya.html
@@ -33,7 +33,7 @@
 			<div class="project_img">
 				<img src="ediya.jpg" class="re_img" alt="ediya">
 			
-			<div class="starmi_link_btn">
+			<div class="ediya_link_btn">
 				<a href="ediya/css/index.html" target = "_blank">view</a></div>
 			
 			
