--- a/gold/concept2.html
+++ b/gold/concept2.html
@@ -13,7 +13,7 @@
 
 	<link rel="shortcut icon" href="favicon.ico">
 	
-	<link href="css/desc.css" rel="stylesheet" type="text/css">	
+	<link href="../css/desc.css" rel="stylesheet" type="text/css">	
 		
 	</head>
 
@@ -43,7 +43,7 @@
 		
 		<div class="back">
 			
-		 <div class="back_button"><a href="../sample/index.html">back</a></div>
+		 <div class="back_button"><a href="../goldhospital.html">back</a></div>
 		</div>
 
 			
