--- a/gold/contecpt1.html
+++ b/gold/contecpt1.html
@@ -8,12 +8,12 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Ediya</title>
+	<title>logo1</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="shortcut icon" href="favicon.ico">
 	
-	<link href="css/desc.css" rel="stylesheet" type="text/css">	
+	<link href="../css/desc.css" rel="stylesheet" type="text/css">	
 		
 	</head>
 
@@ -43,7 +43,7 @@
 		
 		<div class="back">
 			
-		 <div class="back_button"><a href="../sample/index.html">back</a></div>
+		 <div class="back_button"><a href="../goldhospital.html">back</a></div>
 		</div>
 
 			
