--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     			<div class="col-md-6 col-lg-6 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about.jpg);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/%EC%9E%84%EC%88%98%EB%AF%B8-044.jpg);">
 	    				</div>
     				</div>
     			</div>
@@ -281,7 +281,7 @@ Publishing & DesignBusan It Education Center</h2>
 										<div class="progress">
 										 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-										    <span>90%</span>
+										    <span>85%</span>
 										  	</div>
 										</div>
 									</div>
@@ -292,7 +292,7 @@ Publishing & DesignBusan It Education Center</h2>
 										<div class="progress">
 										 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-										    <span>70%</span>
+										    <span>75%</span>
 										  	</div>
 										</div>
 									</div>
@@ -534,9 +534,9 @@ Publishing & DesignBusan It Education Center</h2>
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">부산광역시 해운대구<br>재반로 211번길<br>8-86</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">010-5559-6371</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">sumi4480@naver.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -546,7 +546,7 @@ Publishing & DesignBusan It Education Center</h2>
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
