--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
-          		<span class="subheading">HI, I am</span>
+          		<span class="subheading">HI🙋‍♀, I am</span>
 		  				<h1>NAYOON LIM</h1>
 			  				<h2>I'm a 
 								  <span
@@ -91,7 +91,7 @@
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>임나윤</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>1996/01/01</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>부산광역시 해운대구 재반로 221번길 8-86</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>부산광역시 해운대구 재반로 211번길 8-86</span></li>
 		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>sumi4480@naver.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span>010-5559-6371</span></li>
@@ -126,7 +126,7 @@
 		    					<span class="date">2020</span>
 		    					<h2>부산시 교육과정</h2>
 		    					<span class="position">Centum Vocation Training Institute <br>센텀직업전문학교</span>
-		    					<p>Word, Power Point, Adobe photoshop, Adobe Illustrator 등을 다룰 수 있는 능력을 키워 트랜디한 면목을 넓히고 제작할 수 있는 기초를 다졌다.<br>
+		    					<p>Word, Power Point, Adobe photoshop, Adobe Illustrator 등을 다룰 수 있는 능력을 키워 트랜디한 면목을 넓히고 제작할 수 있는 기초를 다졌습니다.<br>
 		    					Photoshop GTQ1급 자격증 취득</p>
 	    					</div>
 	    				</div>
@@ -139,7 +139,7 @@
 		    					<h2>반응형 웹퍼블리싱 & 웹디자인 과정<br>
 Publishing & DesignBusan It Education Center</h2>
 		    					<span class="position">부산 it 교육센터</span>
-		    					<p>디자인씽킹을 바탕으로 한 사고를 통해 프로토 타입 제작 및 사용성 테스트, 사용자 중심의 디자인 구성요소를 다룰 수 있는 능력과, UI/UX를 설계할 수 있는 능력을 향상시켰다.<br>Craftsman Computer Graphics Operation 컴퓨터그래픽스 자격증 취득/ Web Design 웹디자인 필기 취득 </p>
+		    					<p>디자인씽킹을 바탕으로 한 사고를 통해 프로토 타입 제작 및 사용성 테스트, 사용자 중심의 디자인 구성요소를 다룰 수 있는 능력과, UI/UX를 설계할 수 있는 능력을 향상시켰습니다.<br>Craftsman Computer Graphics Operation 컴퓨터그래픽스 자격증 취득/ Web Design 웹디자인 필기 취득 </p>
 		    				</div>
 	    				</div>
 					  </div>
@@ -325,7 +325,7 @@ Publishing & DesignBusan It Education Center</h2>
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">My Projects</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>BX Design, Web Design, Visual Design, UI&UX Design</p>
           </div>
         </div>
     		<div class="row no-gutters">
@@ -497,7 +497,7 @@ Publishing & DesignBusan It Education Center</h2>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p></p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
