--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>나윤 포트폴리오</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="images/fabicon.ico" />
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
@@ -87,12 +88,13 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>변화하고 혁신하라 , 저의 신념은 변화를 이끌 줄 알고 개선하는 것 입니다. 자신의 한계를 뛰어 넘는 것에 대해 두려워하지 않고 최대한 해보는 것 입니다. 그런 신념을 통해 저는 디자인으로 목표를 향해 나아갈 것이고 회사에 최선을 다할 것 입니다. </p>
+		            <p>안녕하십니까, 임나윤이라고 합니다.<br>
+		            변화, 꾸준🏃‍♀ 저의 신념은 바뀌어가는 현대사회의 변화에 대해 두려워 하지않고, 무슨일이든 꾸준히 해보는 것 입니다. 무슨일이 주어지던 최선을 다하고 배우자, 모든 환경은 배울수 있는 환경이라는 것을 항상 생각하고 디자인으로 목표를 향해 나아갈 것이고 회사에 최선을 다할 것 입니다. </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>임나윤</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>1996/01/01</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>부산광역시 해운대구 재반로 211번길 8-86</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
+		            	
 		            	<li class="d-flex"><span>Email:</span> <span>sumi4480@naver.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span>010-5559-6371</span></li>
 		            </ul>
